feat: send registration success email
